# project-esther

./: .gitignore  CMakeLists.txt  LICENSE.md  README.MD  esther.pro  todo.txt
esther/: CMakeLists.txt  esther.pro  todo.txt
esther/esther/: esther.pro
esther/esther/scripts/: parser.es  script.es
esther/esther/source/: main.cpp
esther/esther/src/: esther.cpp  esther.h  main.cpp
esther/include/: esther.h
esther/include/esther/: array.h  class.h  common.h  const_string.h  context.h  esther.h  exception.h  function.h  id.h  iterator.h  lexer.h  map.h  memory.h  object.h  parser.h  range.h  std_map.h  std_string.h  std_string_map.h  std_vector.h  string.h  symbol.h  try_catch.h  tuple.h  utility.h  valueobject.h  variant.h
esther/libesther/: libesther.pro
esther/libesther/include/: esther.h
esther/libesther/include/esther/: class.h  common.h  esther.h  object.h  str.h  string.h
esther/libesther/source/: engine.cpp  engine.h  esther.cpp  esther.h  estherstaticinterface.cpp
esther/libesther/source/collections/: array.h  hashmap.cpp  hashmap.h  sherwoodmap.cpp  sherwoodmap.h
esther/libesther/source/common/: bytearray.cpp  bytearray.h  common.h  io.cpp  io.h  logger.h  position.cpp  source.cpp  token.cpp  token.h  utility.cpp  utility.h  variant.cpp  variant.h
esther/libesther/source/exception/: breakexception.cpp  breakexception.h  continueexception.h  errorexception.cpp  errorexception.h  lexicalerror.h  returnexception.cpp  returnexception.h  runtimeerror.cpp  runtimeerror.h  syntaxerror.cpp  syntaxerror.h  valueexception.cpp  valueexception.h
esther/libesther/source/expression/: expression.cpp  expression.h  expressionmanager.cpp  expressionmanager.h  iexpressionmanager.h
esther/libesther/source/lexer/: ilexer.h  lexer.cpp  lexer.h
esther/libesther/source/memory/: frame.cpp  frame.h  managedobject.cpp  managedobject.h  markcompactmemorymanager.cpp  markcompactmemorymanager.h  memorymanager.cpp  memorymanager.h  nomemorymanager.cpp  nomemorymanager.h  pointer.h  (+5 more)
esther/libesther/src/: class.c  esther.c  esther.cpp  esther.h  estherstaticinterface.cpp  estherstaticinterface.h  function.c  object.c  str.cpp  str.h  string.c  strmap.cpp  strmap.h
esther/scripts/: parser.es  script.es
esther/source/: engine.cpp  engine.h  esther.cpp  esther.h  iengine.cpp  iengine.h  main.cpp
esther/source/common/: bytearray.cpp  bytearray.h  common.cpp  common.h  debug.h  io.cpp  io.h  token.cpp
esther/source/exception/: errorexception.h  returnexception.h  runtimeerror.h
esther/source/expression/: expression.cpp  expression.h  expressionmanager.cpp  expressionmanager.h  iexpressionmanager.h
esther/source/lexer/: ilexer.cpp  ilexer.h  lexer.cpp  lexer.h
esther/source/parser/: iparser.cpp  iparser.h  parser.cpp
esther/source/runtime/: block.cpp  block.h  class.cpp  class.h  context.cpp  context.h  false.cpp  false.h  function.cpp  function.h  interpretedblock.cpp  interpretedblock.h  interpretedfunction.cpp  nativeblock.cpp  nativeblock.h  nativefunction.cpp  nativefunction.h  null.cpp  null.h  object.cpp  object.h  runtime.cpp  runtime.h  true.cpp  true.h
esther/source/variant/: stringvariant.h  variant.h  variantprivate.h
esther/src/esther/: esther.pro  main.cpp
esther/src/gui/: gui.c  gui.cpp  gui.pro
esther/src/io/: io.c
esther/src/libesther/: array.c  ast.h  class.c  common.c  config.h  const_string.c  context.c  core.c  core.h  esther.c  exception.c  function.c  id.c  identifiers.c  identifiers.def  identifiers.h  iterator.c  kernel.c  kernel.h  keywords.def  lexer.c  libesther.pro  map.c  memory.cpp  nodes.def  object.c  operators.def  othertokens.def  parser.c  range.c  std_map.cpp  std_string.c  std_string.cpp  std_string_map.cpp  std_vector.cpp  string.c  symbol.c  symbols.c  symbols.h  try_catch.c  (+5 more)
esther/src/qt/: qt.cpp  qt.pro
esther/test/: test.pro
esther/test/source/: expressiontest.cpp  expressiontest.h  main.cpp
esther/test/src/: main.cpp
testher/: CMakeLists.txt  testher.pro
testher/source/: testher.cpp
testher/source/system/: application.cpp
testher/src/: main.cpp  testher.h
testher/src/io/: directory.cpp  directory.h  file.cpp  file.h
testher/src/system/: application.cpp  application.h
(+965 files in other folders)
